# workspaces

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md
sentinel_omega/: .env.example  AGENTS.md  CLAUDE.md  README.md  launcher.py  orchestrator.py  pyproject.toml  reboot.py  requirements.txt  shutdown.py
sentinel_omega/config/: __init__.py  onnx_config.py  sentinel_config.py
sentinel_omega/core/: onnx_engine.py
sentinel_omega/core/delta_enriched/: __init__.py  composite.py  cross.py  delta_engine.py  fetchers.py  market_mapping.py
sentinel_omega/core/firmas/: __init__.py  cimatica.py  signature_engine.py
sentinel_omega/core/juez/: __init__.py  juez.py  pesos.py
sentinel_omega/core/nodal/: __init__.py  nodal_validation.py  node_aggregation.py
sentinel_omega/core/precursor/: __init__.py  assertivity.py  baseline.py  jupiter.py  muro_cinco_eventos.py  muro_lags.py  precursor_types.py  (+2 more)
sentinel_omega/docs/: Documento (1).docx  Documento (2).docx  Documento (3).docx  Documento (4) (1).docx  Documento (5).docx  Documento (6).docx  Documento (7).docx  db_builder.py  omega.docx  sentinel Omega 2.docx  sentinel omega.docx  uvg.docx
sentinel_omega/models/: .gitkeep
sentinel_omega/notebooks/: README.md  jupyter_launcher.ipynb  requirements_jupyter.txt
sentinel_omega/tests/: test_agents.py  test_api_connectors.py  test_cimatica_correo.py  test_entrenar_paralelo.py  test_firmas.py  test_infrastructure.py  test_jupiter.py  test_normalizacion.py  test_pipeline.py  test_precursor.py  test_reporte_agentes.py  test_schumann_filter.py  test_snt_engine.py
(+340 files in other folders)
