[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-omega"
version = "2.5.0"
description = "Precursor detection platform for natural events (TITAN V32 lineage)"
authors = [
    {name = "Elán Zainos Corona", email = "elan.zainos.corona@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary — Fractal Core Research"}

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "requests>=2.28",
    "onnxruntime>=1.14",
]

[project.optional-dependencies]
geodynamic = [
    "ephem>=4.1",
    "opencv-python>=4.7",
    "folium>=0.14",
    "eodag>=4.0",
]
crypto = [
    "ccxt>=4.0",
    "websockets>=11.0",
]
bolsa = [
    "yfinance>=0.2",
]
dashboard = [
    "streamlit>=1.28",
    "plotly>=5.15",
]
all = [
    "sentinel-omega[geodynamic,crypto,bolsa,dashboard]",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sentinel_omega*"]
